# ckb-controller

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.sh  controller.config.json  game-results.jsonl  package-lock.json  package.json  plan.md
.github/workflows/: docs.yml
cli/: README.md  bin.mjs  package-lock.json  package.json
cli/commands/: account.mjs  build.mjs  deploy.mjs  dev.mjs  game.mjs  init.mjs  status.mjs  tunnel.mjs
cli/lib/: config.mjs  known-deployments.mjs
contracts/controller-game-cell/: Cargo.toml  build.rs
contracts/controller-game-cell/src/: main.rs
contracts/controller-session-lock/: Cargo.toml  build.rs
contracts/controller-session-lock/src/: main.rs
demo/: .gitignore  GAME-TESTNET.md  README.md  check-account.mjs  check-balance.mjs  controller-config.mjs  drain-account.mjs  drain-user.mjs  fiber-game.html  fund-user.mjs  fund.mjs  game-advance.mjs  game-cell.json  game-config.mjs  game-deploy.json  game-deploy.mjs  game-genesis.mjs  game.html  get-user-addr.mjs  grow-account.mjs  grow-user.mjs  index.html  package-lock.json  package.json  post-intent.mjs  run-live-match.mjs  run-live-multi.mjs  run-live.mjs  test-funding.mjs  test-reconstruct.mjs  topup.mjs  tsconfig.json  vite.config.ts
demo/.edge-profile/: DevToolsActivePort  Local State
demo/.edge-profile/Default/: DIPS  History  Preferences  Secure Preferences  Web Data  load_statistics.db
demo/.edge-profile/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000002  f_000004  f_000005  f_000006  f_000007  f_000008  f_00000d  f_00000e  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  index
demo/.edge-profile/Default/Code Cache/js/: 027aa32a8ef6c0e0_0  02b319f99dc7b3c8_0  089204bc5e17e81e_0  0b885c280605fe79_0  0e249fd13bb4a979_0  0e8ff1fcca899201_0  13275aa012535697_0  14b92075d4d7120d_0  162c549d0e4e57ca_0  19643382603a2939_0  1f767b7d0bc8a702_0  310ee13c312b8332_0  3121172ceaad1c7f_0  33004581428210b3_0  38251a37fb9cfeed_0  38510799bd2f2058_0  3bdff78e15d93137_0  3f75462aa86b3096_0  466ed252602191d1_0  47e90636ef9b7017_0  492530de48c2065e_0  4977d5d153286ad3_0  4ac353e8f7ce1ac6_0  4f2faade159ac060_0  5380efc3fc02917a_0  556662a77c18e137_0  59c3a37bcdf6a7e6_0  667626d62088d034_0  6c87b45b87a1caf4_0  6f3fad8137c3424d_0  81b25f8e581780bc_0  8fecf6f25957cb54_0  ad783cd2debe2adb_0  b804e8f8b7de9828_0  bacf743a408dd3b5_0  bc4a15dc5797e7af_0  bd56c4e8d6c1deb6_0  bedf48cc41cd89a2_0  cb6f1c0e12b36481_0  cf80a7318798fa5f_0  (+6 more)
demo/.edge-profile/Default/Code Cache/js/index-dir/: the-real-index
demo/.edge-profile/Default/Code Cache/wasm/index-dir/: the-real-index
demo/.edge-profile/Default/DawnGraphiteCache/: data_1  index
demo/.edge-profile/Default/DawnWebGPUCache/: data_1  index
demo/.edge-profile/Default/EdgeCoupons/coupons_data.db/: 000008.ldb  LOG  LOG.old  MANIFEST-000001
demo/.edge-profile/Default/EdgeHubAppUsage/: EdgeHubAppUsageSQLite.db
demo/.edge-profile/Default/EdgeSessions/: SessionRestoreLog
demo/.edge-profile/Default/EntityExtraction/: domains_config.json
demo/.edge-profile/Default/Extension Rules/: LOG
demo/.edge-profile/Default/Extension Scripts/: LOG
demo/.edge-profile/Default/Extension State/: LOG  LOG.old
demo/.edge-profile/Default/GPUCache/: data_1  index
demo/.edge-profile/Default/IndexedDB/http_localhost_5173.indexeddb.leveldb/: 000005.ldb  LOG  MANIFEST-000001
demo/.edge-profile/Default/IndexedDB/http_localhost_5175.indexeddb.leveldb/: 000008.ldb  LOG  MANIFEST-000001
demo/.edge-profile/Default/Local Storage/leveldb/: LOG  LOG.old
demo/.edge-profile/Default/Network/: Network Persistent State  Reporting and NEL
demo/.edge-profile/Default/Session Storage/: LOG
demo/.edge-profile/Default/Sessions/: Session_13427938445968164  Session_13427961838831484  Tabs_13427938575203792  Tabs_13427961839023938
demo/.edge-profile/Default/Shared Dictionary/cache/index-dir/: the-real-index
demo/.edge-profile/Default/Site Characteristics Database/: LOG  LOG.old
demo/.edge-profile/Default/Sync Data/LevelDB/: LOG  LOG.old
demo/.edge-profile/Default/WebStorage/: QuotaManager
demo/.edge-profile/Default/Workspaces/Logs/: Workspaces Internals Logs
demo/.edge-profile/Default/shared_proto_db/: LOG  LOG.old
demo/.edge-profile/Default/shared_proto_db/metadata/: LOG  LOG.old
demo/.edge-profile/GPUPersistentCache/DawnGraphiteCache/MNIWWJ6LYBXKQS7RZ2KZNUZ3QHFNW4K3/: cache.db-wal
demo/.edge-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
demo/.edge-profile/Nurturing/: campaign_history
demo/.edge-profile/ShaderCache/: data_1  index
demo/.edge-profile/component_crx_cache/: metadata.json
demo/public/fiber-config/: testnet.yml
demo/scripts/: copy-pkg.mjs
demo/src/: config.ts  fiber-game-main.ts  fiber-game.ts  game.ts  main.ts  rail.ts  style.css  userKeys.ts
docker/: build.Dockerfile
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: README.md  configuration.md  going-live.md  quickstart.md  sessions.md  trust.md  your-game.md
docs/internals/: README.md  architecture.md  deployments.md  fiber-game.md  invariants.md  multi-user-plan.md  phase2-live-run.md  test-map.md  wire-formats.md
game-rules/: Cargo.toml  README.md
game-rules/src/: lib.rs
paymaster/: Cargo.toml
paymaster-service/: Cargo.toml
paymaster-service/src/: lib.rs  main.rs  operator.rs  rpc.rs  service.rs  sighash.rs
paymaster/src/: assemble.rs  authz.rs  biscuit_gate.rs  lib.rs
scripts/: build-wasm.sh  find_clang
sdk/: Cargo.toml
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/scripts/: check-account.mjs  check-invoice-mock.mjs
sdk-js/src/: account.ts  game.ts  index.ts  keys.ts  live.ts  mock.ts  rail.ts  session.ts  types.ts
sdk/src/: channel.rs  game.rs  lib.rs
tests/: Cargo.toml
tests/src/: game_operator_sanity.rs  game_tests.rs  lib.rs  paymaster_sanity.rs  sdk_sanity.rs  service_sanity.rs  tests.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
