[package]
name = "controller-session-lock"
version = "0.1.0"
edition = "2024"

# Cartridge-Controller-style session lock for CKB.
# Design: ../../docs (see controller-session-lock.md in the ckb repo).
# Reference implementations: nervosnetwork/fiber-scripts (funding-lock, commitment-lock).

[dependencies]
ckb-std = "0.18"
ckb-hash = { version = "0.202.0", default-features = false, features = ["ckb-contract"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[build-dependencies]
ckb-gen-types = "0.202.0"
